kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-starter
  labels:
    app: production-starter
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: production-starter
  template:
    metadata:
      labels:
        app: production-starter
    spec:
      imagePullSecrets:
      - name: gitlab-registry-secret
      containers:
      - name: production-starter-container
        image: __IMAGE_NAME_PLACEHOLDER__:__IMAGE_TAG_PLACEHOLDER__
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
